# FEM

./: Analysis.cpp  Assemble.cpp  CMakeLists.txt  Ele_Load.cpp  Ele_Stiff.cpp  Ele_Stress.cpp  Ele_Traction.cpp  Ele_body.cpp  Element_info.txt  Element_info_20beam.txt  Element_info_quad.txt  Element_info_triangle_quadratic.txt  FEA.cpp  FEA.h  FEA_main.cpp  FEM2D.m  README  ReadEle.cpp  Reorder.cpp  SolveEq.cpp  a.out  a1mix.cc  beam0.smb  build.sh  load_info.txt  load_info_20beam.txt  load_info_20beam_body.txt  load_info_20beam_cantilever.txt  load_info_beam.txt  load_info_quad.txt  opt_beam  opt_triangle  opt_try  opt_try2  opt_try3  opt_try4  opt_try5  opt_try_quadratic  outQuad0.smb  outTriangle0.smb  (+2 more)
Backup/: FEA.cpp
matlabcode/: FEM_2Dor3D_linelast_standard.m  FEM_results.txt  Linear_elastic_beam.txt  Linear_elastic_quad4.txt  Linear_elastic_quad8.txt  Linear_elastic_triangles.txt  Linear_elastic_triangles6.txt  beam_displacement.txt  inputparameter.txt  preparebeam.m  testbeam.m
meshcreate/: CMakeLists.txt  README  Reorder.cpp  a1quad.cc  a1triangle.cc  a1triangle_bigger.cc  createmesh.h  outQuad0.smb  outTriangle0.smb
meshcreate/numbered/0/: 0.vtu
meshcreate/outQuad/: outQuad.pvtu
meshcreate/outQuad/0/: 0.vtu
meshcreate/outTriangle/0/: 0.vtu
numbered/0/: 0.vtu
testcode/: a.out  test2d.cpp  testeigen.cpp
